[package]
name = "raze"
version = "1.5.0"
authors = ["Rodrigo Rivas Costa <rodrigorivascosta@gmail.com>"]
edition = "2018"
description = "A ZX Spectrum emulator, for WebAssembly, written in Rust"
repository = "https://github.com/rodrigorc/raze"
license = "MIT"

[workspace]
members = ["xtask"]

[lib]
crate-type=["cdylib"]

[[bin]]
name = "console"
path = "src/main.rs"

[[bin]]
name = "dump_op"
path = "src/dump_op.rs"
required-features = ["dump_ops"]

[profile.release]
lto = true
panic = "abort"
opt-level = 3

[dependencies]
zip = { version = "*", optional = true, default_features = false, features = ["deflate"] }
wasm-bindgen = "*"
anyhow = "*"

[features]
default = ["zip"]
dump_ops = []
