[package]
name = "raze"
version = "1.7.0"
authors = ["Rodrigo Rivas Costa <rodrigorivascosta@gmail.com>"]
edition = "2021"
description = "A ZX Spectrum emulator, for WebAssembly, written in Rust"
repository = "https://github.com/rodrigorc/raze"
license = "MIT"

[workspace]
members = ["xtask"]

[lib]
crate-type=["cdylib"]

[[bin]]
name = "console"
path = "src/main.rs"

[[bin]]
name = "dump_op"
path = "src/dump_op.rs"
required-features = ["dump_ops"]

[profile.release]
lto = true
panic = "abort"
opt-level = 3
overflow-checks = false

[dependencies]
zip = { version = "*", optional = true, default_features = false, features = ["deflate"] }
wasm-bindgen = "*"
anyhow = "*"
log = "*"
console_log = { version = "*", features = ["color"] }
web-sys = "*"
flate2 = { version = "*", optional = true }

[features]
default = ["compression"]
compression = ["zip", "flate2"]
dump_ops = []
