[package]
name = "zxspectrum-raze"
version = "0.1.0"
edition = "2021"

[dependencies]
zip = { version = "2.2.2", optional = true, default-features = false, features = ["deflate"] }
anyhow = "1"
log = "0.4"
flate2 = { version = "1", optional = true }

[features]
default = ["compression"]
compression = ["zip", "flate2"]
dump_ops = []
