[package]
name = "zxspectrum-raze"
version = "0.1.0"
edition = "2021"

[dependencies]
zip = { version = "7.0", optional = true, default-features = false, features = ["deflate"] }
anyhow = "1"
log = "0.4"
bitflags = "2.11.0"
flate2 = { version = "1", optional = true }

[features]
default = ["compression"]
compression = ["zip", "flate2"]
dump_ops = []
